yaml-vimを使うのをやめる
https://github.com/stephpy/vim-yaml/issues/6

--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -1,6 +1,6 @@
-[[plugins]]
-repo  = 'stephpy/vim-yaml'
-on_ft = ['yaml']
+# [[plugins]]
+# repo  = 'stephpy/vim-yaml'
+# on_ft = ['yaml']
 
 [[plugins]]
 repo  = 'fatih/vim-go'
