feat: ruby用の設定の追加

--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -38,3 +38,9 @@ on_ft = ['typescript']
 repo  = 'Quramy/tsuquyomi'
 on_ft = ['typescript']
 build = 'make -f make_mac.mak'
+repo  = 'Shougo/deoplete-rct'
+on_ft = ['ruby']
+
+[[plugins]]
+repo  = 'vim-ruby/vim-ruby'
+on_ft = ['ruby']
